--- a/index.html
+++ b/index.html
@@ -50,37 +50,37 @@
         <section class="our work">
             <h2>What we do</h2>
             <ul>
-                <li><img src="./images/img1.jpg" alt="Keybord" width="370" height="294"></li>
-                <li><img src="./images/img2.jpg" alt="iPhone" width="370" height="294"></li>
-                <li><img src="./images/img3.jpg" alt="Tablet" width="370" height="294"></li>
+                <li><img src="./images/img1.jpg.jpg" alt="Keybord" width="370" height="294"></li>
+                <li><img src="./images/img2.jpg.jpg" alt="iPhone" width="370" height="294"></li>
+                <li><img src="./images/img3.jpg.jpg" alt="Tablet" width="370" height="294"></li>
             </ul>
         </section>
         <section class="our team">
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/img4.jpg" alt="Product Designer" width="270" height="260">
+                <li><img src="./images/img4.jpg.jpg" alt="Product Designer" width="270" height="260">
                     <p>Christopher Walker</p>
                     <p>Product Designer</p></li>
-                <li><img src="./images/img5.jpg" alt="Frontend Developer" width="270" height="260">
+                <li><img src="./images/img5.jpg.jpg" alt="Frontend Developer" width="270" height="260">
                     <p>Kylie Evans</p>
                     <p>Frontend Developer</p></li>
-                <li><img src="./images/img6.jpg" alt="Marketer" width="270" height="260">
+                <li><img src="./images/img6.jpg.jpg" alt="Marketer" width="270" height="260">
                     <p>Ryan Harris</p>
                     <p>Marketing</p></li>
-                <li><img src="./images/img7.jpg" alt="UI Designer">
+                <li><img src="./images/img7.jpg.jpg" alt="UI Designer" width="270" height="260">
                     <p>Tyler Moore</p>
                     <p>UI Designer</p></li>
             </ul>
         </section>
     </main>    
         <footer>
-            <div>
             <a href="">WebStudio</a>
+            <address>
                 <p>695 Park Ave, New York, NY 10065,<br>
                      United States</p>
-                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="mailto:info@example.com">info@example.com</a><br>
                 <a href="tel:+12127724150">+1 212-772-4150</a>     
-            </div>
+            </address>
         </footer>
     </body>
 </html>
